syntax = "proto3";


package  greeter;


option go_package = "./api/DownloadBot/v1";

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc SendSuddenMessage (SuddenMessage) returns (Status) {}
  rpc TMStop (TMStopMsg) returns (Status) {}
  rpc Ping (ping) returns (Status) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

message SuddenMessage {
  string message = 1;
}

message TMStopMsg {
  string gid = 1;
}

message Status {
  int32 code = 1;
  string message = 2;
}

message ping {
  string clientName = 1;
}